--- a/libs/ice-custom-rules/src/lib/rules/definition-rules/payload/insis-date-format-payload-rule/insis-date-format-payload-rule.yml
+++ b/libs/ice-custom-rules/src/lib/rules/definition-rules/payload/insis-date-format-payload-rule/insis-date-format-payload-rule.yml
@@ -7,7 +7,7 @@ implementations:
         definition:
           title: Incidents overview
           executable: true
-          showInsights: false
+          showInsights: true
           payload:
             InsisDateFormatPayloadRule: {}
       ```
